# minipython

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_CN.md
examples/sandbox/: README.md  allocation_budget.py  blocked_host_capabilities.py  cache_injection.py  call_depth_budget.py  compiler_memory_pressure_generator.py  dynamic_imports.py  instruction_budget.py  output_budget.py  safe_stdlib.py  source_size_budget.py  symlink_escape_main.py  symlink_escape_target.py  wall_clock_budget.py
examples/sandbox/blocked_import_root/: main.py  plugin.py
examples/sandbox/import_root/: main.py  plugin.py
python/: minipython_sandbox.py  pyproject.toml
src/: ast.rs  binding.rs  bytecode.rs  compiler.rs  lexer.rs  lib.rs  main.rs  parser.rs  product.rs  sandbox.rs  stdlib.rs  value.rs  vm.rs
tests/: README.md  cases.toml  cpython_coverage.md  cpython_diff.rs  cpython_grammar_inventory.md  cpython_inventory.rs  cpython_manifest.rs  cpython_migration.md  cpython_subset.rs  cpython_test_manifest.md  language.rs  pipeline.py  product.rs  run.sh  runtime.rs  sandbox.rs  sandbox_boundary.rs  sandbox_e2e_matrix.md  sandbox_examples.rs  sandbox_mvp.md  sandbox_process.rs  sandbox_runtime_mvp.md  sandbox_test_strategy.md  test_pipeline.py
tests/gap_corpus/: README.md  json.toml  math_integer.toml  smoke.toml  stdlib_allowlist.toml
tools/: cpython_gap_sweep.py  run_cpython_gap_sweep.sh  run_sandbox_mvp_checks.sh  test_cpython_gap_sweep.py
